[package]
name = "ed"
version = "0.1.0"
description = "The editor"
authors = ["rabbitornot <166334983+rabbitornot@users.noreply.github.com>"]
license = "MIT"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
color-eyre = "0.6.3"
crossterm = "0.29.0"
ratatui = "0.29.0"
